[package]
name = "oxicsv"
version = "0.1.4"
authors = ["Alexander Battisti <alexander.battisti@eon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.3.0"
